--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -92,7 +92,7 @@ nav a:hover {
   background-image: url(../img/about.jpg);
   background-size: cover;
   display: grid;
-  line-height: 5vh;
+  line-height: 8vh;
   font-family: "Oswald", sans-serif;;
   padding-bottom: 2vw;
   color: white;
@@ -111,15 +111,18 @@ nav a:hover {
 
 .portfoliopic {
   background-color: grey;
-  background-image: url(../img/background.jpg);
+  background-image: url(../img/portfolio.jpg);
   background-size: cover;
   display: grid;
-  line-height: 5vh;
+  line-height: 8vh;
   font-family: "Oswald", sans-serif;;
   padding-bottom: 2vw;
   color: white;
 }
 
+.web {
+  display: grid;
+}
 
 .pagetitle {
     padding-top: 2vw;
