--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -41,7 +41,7 @@ nav {
 .nav2 {
   text-align: right;
   display: inline-block;
-  width: 47%;
+  width: 49%;
   position: relative;
 }
 
@@ -120,8 +120,22 @@ nav a:hover {
   color: white;
 }
 
+.header {
+  font-size: 3em;
+  padding-left: 3em; 
+}
+
 .web {
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(700px,1fr));
+  text-align: center;
+
+}
+
+.print {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(700px,1fr));
+  text-align: center;
 }
 
 .pagetitle {
@@ -131,27 +145,31 @@ nav a:hover {
 }
 
 .fontposter {
-  width: 30%;
+  width: 50%;
 }
 
 .beijingposter {
-  width: 30%;
+  width: 50%;
 }
 
 .monogram {
-  width: 30%;
+  width: 50%;
 }
 
 .label {
-  width: 30%;
+  width: 50%;
 }
 
 .story {
-  width: 30%;
+  width: 50%;
 }
 
 .conference {
-  width: 30%;
+  width: 50%;
+}
+
+.domain {
+  width: 50%;
 }
 
 @media (max-width: 700px) {
