--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -13,6 +13,7 @@ body {
   color: black;
   margin: 0px;
   height: 100%;
+  background-color: rgb(234, 238, 240);
 }
 
 .container {
@@ -99,16 +100,44 @@ nav a:hover {
 }
 
 .aboutbox {
-  background-color: rgb(120, 158, 214);
-  margin-left: 7vw;
-  margin-right: 7vw;
-  margin-top: 3%;
+  /* background-color: rgb(120, 158, 214); */
+  margin-left: 33%;
+  margin-right: 33%;
+  max-width: 33%;
+  /* margin-top: 3%; */
   padding-top: 3em;
   padding-bottom: 3em;
-  padding-right: 5em;
-  padding-left: 5em;
+  /* padding-right: 4em;
+  padding-left: 4em; */
+  /* display: grid; */
+  /* grid-template-columns: 1fr .25fr 1fr .25fr .15fr; */
 }
 
+ .profile {
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding-bottom: 1em;
+}
+
+
+.col1 {
+  grid-column: 1/2;
+}
+
+.col2 {
+  grid-column: 3/4;
+}
+
+.col3 {
+  grid-column: 5/6;
+  text-align: center;
+}
+
+.col3 a {
+  margin-right: 1em;
+}
 .portfoliopic {
   background-color: grey;
   background-image: url(../img/portfolio.jpg);
@@ -123,12 +152,17 @@ nav a:hover {
 .header {
   font-size: 3em;
   padding-left: 3em; 
+  /* text-align: center; */
+  font-family: "Oswald", sans-serif;
+  padding-bottom: 1em;
+  border-bottom: 1px solid;
 }
 
 .web {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(700px,1fr));
   text-align: center;
+  margin-bottom: 5em;
 
 }
 
@@ -145,7 +179,7 @@ nav a:hover {
 }
 
 .fontposter {
-  width: 50%;
+  width: 30%;
 }
 
 .beijingposter {
@@ -153,7 +187,7 @@ nav a:hover {
 }
 
 .monogram {
-  width: 50%;
+  width: 30%;
 }
 
 .label {
@@ -169,6 +203,10 @@ nav a:hover {
 }
 
 .domain {
+  width: 50%;
+}
+
+.photography {
   width: 50%;
 }
 
@@ -192,10 +230,22 @@ nav a:hover {
   }
 
   .aboutbox {
+    /* margin-left: 0%;
+    margin-right: 0%;
+    display: block; */
+
     padding-left: 1em;
     padding-right: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+  }
+
+  .profile {
+    max-width: 100%;
+    padding-bottom: 0em;
   }
 
 }
