--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -7,257 +7,95 @@ html {
 }
 
 body {
-  font-family: "Roboto", Helvetica, sans-serif;
-  font-size: 16px;
+  font-family: "Montserrat", Helvetica, sans-serif;
+  font-size: 18px;
   line-height: 1.5em;
-  color: black;
-  margin: 0px;
-  height: 100%;
-  background-color: rgb(234, 238, 240);
+  color: #333;
+  background-color: #F2F2F2;
+  margin: 0em;
+}
+
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  font-family: "Domine", serif;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.3em;
+  margin: 1em;
+}
+
+h3 {
+  margin-bottom: 0em;
+  margin-top: 1.5em;
+  font-weight: 400;
 }
 
 .container {
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0em;
 }
 
-nav {
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.3);
-  font-size: 1.5em;
-  line-height: 2em;
-  font-family: "Oswald", sans-serif;
-}
-
-.nav1 {
-    width: 50%;
-    padding-left: 1em;
-    display: inline-block;
-}
-
-.active {
-  display: inline-block;
-}
-
-.nav2 {
-  text-align: right;
-  display: inline-block;
-  width: 49%;
-  position: relative;
-}
-
-.background {
-  width: 100%;
-  background-color: black;
-  background-image: url(../img/background.jpg);
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
-
-.title {
-  font-family: "Oswald", sans-serif;
-  color: white;
-  text-align: center;
-  margin-top: 35vh;
-  font-size: 5vh;
-  line-height: 3vh;
-}
-
-.details {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-}
-
-nav a {
-  text-decoration: none;
-  color: white;
-  padding-right: 1em;
-}
-
-nav a:visited {
-  text-decoration: none;
-  color: white;
-}
-
-nav a:hover {
-  color: orange;
-}
-
-.active a {
-  text-decoration: underline;
-}
-
-.aboutpic {
-  background-color: grey;
-  background-image: url(../img/about.jpg);
-  background-size: cover;
-  display: grid;
-  line-height: 8vh;
-  font-family: "Oswald", sans-serif;;
-  padding-bottom: 2vw;
-  color: white;
-}
-
-.aboutbox {
-  /* background-color: rgb(120, 158, 214); */
-  margin-left: 33%;
-  margin-right: 33%;
-  max-width: 33%;
-  /* margin-top: 3%; */
-  padding-top: 3em;
-  padding-bottom: 3em;
-  /* padding-right: 4em;
-  padding-left: 4em; */
-  /* display: grid; */
-  /* grid-template-columns: 1fr .25fr 1fr .25fr .15fr; */
-}
-
- .profile {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  padding-bottom: 1em;
-}
-
-
-.col1 {
-  grid-column: 1/2;
-}
-
-.col2 {
-  grid-column: 3/4;
-}
-
-.col3 {
-  grid-column: 5/6;
-  text-align: center;
-}
-
-.col3 a {
+.nav {
+  font-size: 24px;
+  font-weight: bold;
+  padding-top: 1em;
+  padding-bottom: 2em;
   margin-right: 1em;
+  margin-left: 1em;
+  display: flex;
+  justify-content: space-between;
 }
-.portfoliopic {
-  background-color: grey;
-  background-image: url(../img/portfolio.jpg);
-  background-size: cover;
-  display: grid;
-  line-height: 8vh;
-  font-family: "Oswald", sans-serif;;
-  padding-bottom: 2vw;
+
+.nav a {
+  color: #333;
+  text-decoration: none;
+}
+
+.profile {
+  border-radius: 50%;
+  width: 50%;
+  display: block;
+  margin: auto;
+}
+
+.iconlinks {
+  margin-left: 1.5em;
+  margin-bottom: 2em;
+}
+
+.github {
+  margin-right: 0.75em;
+}
+
+.nca {
+  background-color: #2F80ED;
+  width: 100%;
+  padding: 2em;
   color: white;
 }
 
-.header {
-  font-size: 3em;
-  padding-left: 3em; 
-  font-family: "Oswald", sans-serif;
-  padding-bottom: 1em;
-  border-bottom: 1px solid;
+.ssd {
+  background-color: #F2994A;
+  width: 100%;
+  padding: 2em;
+  color: white;
 }
 
-.web {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(700px,1fr));
-  text-align: center;
-  margin-bottom: 5em;
-
+.avenir {
+  background-color: #EB5757;
+  width: 100%;
+  padding: 2em;
+  color: white;
 }
 
-.print {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(700px,1fr));
-  text-align: center;
+.pasta {
+  background-color: #6FCF97;
+  width: 100%;
+  padding: 2em;
+  color: white;
 }
 
-.pagetitle {
-    padding-top: 2vw;
-    font-size: 2em;
-    text-align: center;
-}
 
-.fontposter {
-  width: 30%;
-}
-
-.beijingposter {
-  width: 50%;
-}
-
-.monogram {
-  width: 30%;
-}
-
-.label {
-  width: 50%;
-}
-
-.story {
-  width: 50%;
-}
-
-.conference {
-  width: 50%;
-}
-
-.domain {
-  width: 50%;
-}
-
-.photography {
-  width: 50%;
-}
-
-@media (max-width: 700px) {
-
-  .nav1 {
-    display: block;
-    width: 100%;
-    text-align: center;
-    padding-left: 0em;
-  }
-
-  .nav2 {
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
-
-  nav a {
-    padding-right: 0.5em;
-  }
-
-  .web {
-    display: block;
-    margin-left: 1em;
-    margin-right: 1em;
-  }
-
-  .print {
-    display: block;
-    margin-left: 1em;
-    margin-right: 1em;
-  }
-
-  .header {
-    text-align: center;
-    padding-left: 0em;
-  }
-
-  .aboutbox {
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-  }
-
-  .profile {
-    max-width: 100%;
-    padding-bottom: 0em;
-  }
-
-}
