--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -8,13 +8,12 @@ html {
 
 body {
   font-family: "Montserrat", Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 1.5em;
+  font-size: 16px;
+  line-height: 1.75em;
   color: #333;
   background-color: #F2F2F2;
   margin: 0em;
 }
-
 
 img {
   max-width: 100%;
@@ -28,7 +27,7 @@ h1 {
   margin: 1em;
 }
 
-h3 {
+h2 {
   margin-bottom: 0em;
   margin-top: 1.5em;
   font-weight: 400;
@@ -38,7 +37,7 @@ h3 {
   margin: 0em;
 }
 
-.nav {
+.mobnav {
   font-size: 24px;
   font-weight: bold;
   padding-top: 1em;
@@ -49,9 +48,13 @@ h3 {
   justify-content: space-between;
 }
 
-.nav a {
+.mobnav a {
   color: #333;
   text-decoration: none;
+}
+
+.nav {
+  display: none;
 }
 
 .profile {
@@ -75,6 +78,8 @@ h3 {
   width: 100%;
   padding: 2em;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
 .ssd {
@@ -82,6 +87,26 @@ h3 {
   width: 100%;
   padding: 2em;
   color: white;
+  display: flex;
+  align-items: center;
+}
+
+.bonewars {
+  background-color: #F2C94C;
+  width: 100%;
+  padding: 2em;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.privdc {
+  background-color: #56CCF2;
+  width: 100%;
+  padding: 2em;
+  color: white;
+  display: flex;
+  align-items: center;
 }
 
 .avenir {
@@ -89,6 +114,14 @@ h3 {
   width: 100%;
   padding: 2em;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tilepic {
+  max-height: 500px;
+  margin: auto;
 }
 
 .pasta {
@@ -96,6 +129,91 @@ h3 {
   width: 100%;
   padding: 2em;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
+.monogram {
+  background-color: #BB6BD9;
+  width: 100%;
+  padding: 2em;
+  color: white;
+  display: flex;
+  align-items: center;
+}
 
+.footer {
+  padding-top: 1em;
+  padding-bottom: -1em;
+  text-align: center;
+}
+
+@media (min-width: 600px) {
+
+  h1 {
+    font-size: 2.75vw;
+  }
+
+  .nav {
+    font-size: 24px;
+    font-weight: bold;
+    padding-top: 1em;
+    padding-bottom: 2em;
+    margin-right: 2em;
+    margin-left: 2em;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .navlinks {
+    font-size: 16px;
+    font-weight: 400;
+  }
+
+  .navlink {
+    padding-left: 1em;
+  }
+  
+  .nav a {
+    color: #333;
+    text-decoration: none;
+  }
+  
+  .mobnav {
+    display: none;
+  }
+
+  .profile {
+    max-width: 25%;
+    float: right;
+    margin-right: 10%;
+  }
+
+  .headtext {
+    float: left;
+    max-width: 50%;
+    margin-left: 1em;
+    margin-top: 2em;
+  }
+
+  .iconlinks {
+    clear: both;
+    margin-left: 2.5em;
+  }
+
+  .tiles {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+}
+
+@media (min-width: 800px) {
+
+  .tiles {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-columns: repeat(auto-fit, minmax(330px, 1fr)); */
+  }
+
+}
