Updates and new pages

--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -41,6 +41,30 @@ h2 {
   background-color: #2F80ED;
 }
 
+.headerssd {
+  background-color: #F2994A;
+}
+
+.headerbonewars {
+  background-color: #F2C94C;
+}
+
+.headerprivdc {
+  background-color: #56CCF2;
+}
+
+.headeravenir {
+  background-color: #EB5757;
+}
+
+.headerpasta {
+  background-color: #6FCF97;
+}
+
+.headermonogram {
+  background-color: #2D9CDB;
+}
+
 .mobnav {
   font-size: 24px;
   font-weight: bold;
